--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <p>我是倚栏听风，这是我的个人网站。</p>
 <p>很高兴你来这里</p>
 <u1>
-
-  
+<li><a href="https://www.zhuhu/people/AJLove">知乎</a>/li>
+<li><a href="https://倚栏听风.weixin.com"我的微信</a></li>
 </u1>
   
